camo-derive/tests/cases/union.stderr
error: `camo` does not support unions
 --> tests/cases/union.rs:4:1
  |
4 | union Foo {
  | ^^^^^
